--- a/album.html
+++ b/album.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accueil - Nirvana</title>
-    <link rel="stylesheet" href="accueil.css">
+    <title>L'album - MTV Unplugged</title>
+    <link rel="stylesheet" href="album.css">
 </head>
 <body>
     <header>
         <div class="logo">
-            <h1>Nirvana - Légende du Grunge</h1>
+            <h1>Nirvana - MTV Unplugged</h1>
         </div>
     </header>
     <nav>
@@ -21,15 +21,14 @@
     </nav>
     <main>
         <section>
-            <h2>Bienvenue dans l'univers de Nirvana</h2>
-            <div class="intro-nirvana">
-                <img src="images.jpg" alt="Photo de Nirvana" class="nirvana-photo">
+            <article>
+                <h2>À propos de l'album</h2>
                 <p>
-                    Nirvana, groupe culte des années 90, a marqué une génération avec son style grunge unique.
-                    Avec Kurt Cobain à la tête, Nirvana a défini une époque grâce à des albums mémorables comme 
-                    *Nevermind* et *In Utero*. Leur impact perdure dans le monde musical.
+                    *MTV Unplugged in New York* est l'un des albums live les plus emblématiques de Nirvana. 
+                    Il a été enregistré en novembre 1993 pour l'émission *MTV Unplugged*. 
+                    Avec son ambiance acoustique et sa sélection de chansons rares, l'album a marqué les esprits.
                 </p>
-            </div>
+            </article>
         </section>
     </main>
     <footer>
