--- a/tracklist.html
+++ b/tracklist.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accueil - Nirvana</title>
-    <link rel="stylesheet" href="accueil.css">
+    <title>Tracklist - Nirvana</title>
+    <link rel="stylesheet" href="tracklist.css">
 </head>
 <body>
     <header>
         <div class="logo">
-            <h1>Nirvana - Légende du Grunge</h1>
+            <h1>Tracklist - MTV Unplugged</h1>
         </div>
     </header>
     <nav>
@@ -21,18 +21,31 @@
     </nav>
     <main>
         <section>
-            <h2>Bienvenue dans l'univers de Nirvana</h2>
-            <div class="intro-nirvana">
-                <img src="images.jpg" alt="Photo de Nirvana" class="nirvana-photo">
-                <p>
-                    Nirvana, groupe culte des années 90, a marqué une génération avec son style grunge unique.
-                    Avec Kurt Cobain à la tête, Nirvana a défini une époque grâce à des albums mémorables comme 
-                    *Nevermind* et *In Utero*. Leur impact perdure dans le monde musical.
-                </p>
-            </div>
+            <aside>
+                <h3>Tracklist</h3>
+				<div class="cover-tracklist">
+                    <img src="logo.jfif" alt="MTV Unplugged Cover" class="album-cover">
+                	<ul>
+						<li> About a Girl</li>
+						<li> Come as You Are</li>
+						<li> Jesus Doesn't Want Me for a Sunbeam</li>
+						<li> The Man Who Sold the World</li>
+						<li> Pennyroyal Tea</li>
+						<li> Dumb</li>
+						<li> Polly</li>
+						<li> On a Plain</li>
+						<li> Something in the Way</li>
+						<li> Plateau</li>
+						<li> Oh Me</li>
+						<li> Lake of Fire</li>
+						<li> All Apologies</li>
+						<li> Where Did You Sleep Last Night</li>
+					</ul>
+				</div>
+            </aside>
         </section>
     </main>
-    <footer>
+	<footer>
         <div class="streaming-platforms">
             <p>Écouter sur :</p>
             <a href="https://open.spotify.com/intl-fr/track/15VRO9CQwMpbqUYA7e6Hwg" target="_blank">
